--- a/package.json
+++ b/package.json
@@ -16,20 +16,20 @@
 		"@types/react-dom": "18.0.9",
 		"classnames": "^2.3.2",
 		"eslint": "8.27.0",
-		"eslint-config-next": "13.0.3",
+		"eslint-config-next": "^14.0.1",
 		"html-react-parser": "^3.0.4",
 		"luxon": "^3.1.0",
-		"next": "^13.5.4",
+		"next": "^14.0.4",
 		"nprogress": "^0.2.0",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
 		"react-infinite-scroll-component": "^6.1.0",
 		"string-strip-html": "^12.0.0",
 		"typescript": "4.9.3"
 	},
 	"devDependencies": {
-		"@agility/content-fetch": "2.0.0-rc18",
+		"@agility/content-fetch": "^2.0.0-rc21",
 		"@agility/nextjs": "13.5.0-rc4",
 		"@tailwindcss/typography": "^0.5.8",
 		"@types/luxon": "^3.1.0",
