--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
 		"typescript": "4.9.3"
 	},
 	"devDependencies": {
-		"@agility/content-fetch": "^2.0.0-rc21",
-		"@agility/nextjs": "14.0.0-rc1",
+		"@agility/content-fetch": "2.0.0-rc23",
+		"@agility/nextjs": "14.0.0-rc2",
 		"@tailwindcss/typography": "^0.5.8",
 		"@types/luxon": "^3.1.0",
 		"@types/nprogress": "^0.2.0",
